--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -6,14 +6,14 @@ import Card from '../components/Card.astro';
 <Layout title="MSSS2023">
     <main style="text-align: center">
         <!-- Keep the header, and buttons the same for all pages-->
-        <h1><span>Mount Stromlo Student Seminars 2023</span></h1>
+        <!--<h1><span>Mount Stromlo Student Seminars 2023</span></h1>-->
+        <section id="logo">
+            <img class="logopic" src="/msss2023/logo_whole_transparent.png" alt="MSSS2023 Logo">
+		</section> 
         <div>
             <br>
             </br>
         </div>
-        <section id="logo">
-            <img class="logopic" src="/msss2023/logo_whole_transparent.png" alt="MSSS2023 Logo">
-		</section> 
         <section id="Menu">
             <a href="/msss2023/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
@@ -82,7 +82,16 @@ import Card from '../components/Card.astro';
         align-self: center;
         margin-left: auto;
         margin-right: auto;
-        max-width: 40%;
+    }
+    @media only screen and (max-width: 600px) {
+                .logopic {
+                  max-width:50%
+                }
+              }
+    @media only screen and (min-width: 601px) {
+    .logopic {
+        max-width:30%
+    }
     }
 
     .anyofimgclass{
