double space names for looong ones

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -27,21 +27,21 @@ import Card from '../components/Card.astro';
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">
-                        Neelesh Amrutha <br>
-                        Sarah Bradbury <br>
-                        Erin Holdorf <br>
-                        Isaac Kanowski <br>
-                        Shin-Jeong Kim <br>
+                        Neelesh Amrutha <br> <br>
+                        Sarah Bradbury <br> <br>
+                        Erin Holdorf <br> <br>
+                        Isaac Kanowski <br> <br>
+                        Shin-Jeong Kim <br> <br>
                         Bailey Martin</span></p>
                 </div>
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD;">Institution</span></h2>
                     <p><span style="color: #D7A5FD;">
-                        ANU <br>
-                        ANU, CSIRO <br>
-                        ANU <br>
-                        ANU <br>
-                        ANU <br>
+                        ANU <br> <br>
+                        ANU, CSIRO <br> <br>
+                        ANU <br> <br>
+                        ANU <br> <br>
+                        ANU <br> <br>
                         ANU </span></p>
                 </div>
                 </div>
