--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -123,11 +123,21 @@ import Card from '../components/Card.astro';
     width: 50%;
     }
     .row {
-        width:80%;
         display: inline-flex;
         flex-wrap: wrap;
         padding-bottom: 1cm;
     }
+
+    @media only screen and (max-width: 600px) {
+                .row {
+                  width:100%
+                }
+              }
+    @media only screen and (min-width: 601px) {
+    .row {
+        width:80%
+    }
+}
 
     div {
         display: block;
