extra spacing on header

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -22,7 +22,7 @@ import Card from '../components/Card.astro';
             <a href="#participants" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         
             <section id='participants' style="background-color:rgba(0,0,0,0.5);">
-                <h2><span style="color: #D7A5FD; ">Participants <br></span></h2>
+                <h2><span style="color: #D7A5FD; ">Participants <br> <br> </span></h2>
                 <div class = "row">   
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
