changing colours of links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,13 +41,13 @@ import Card from '../components/Card.astro';
                     There will be prizes for the best science talk, themed talk and overall best as voted by atendees. <br>
                     We will be having a Panel Q&A with academics, post-docs and late-stage PhD students.
                     If you think of any questions to ask them, write them down and you can submit them during the event or via
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSffxACsd2UrLTamUKFW_IwLjFxrrTJaghAWlCLHHPkXIfIyDA/viewform?usp=sf_link" ><b>this form</b>.</a> <br>
+                    <a style="color: #FDDDA5; " href="https://docs.google.com/forms/d/e/1FAIpQLSffxACsd2UrLTamUKFW_IwLjFxrrTJaghAWlCLHHPkXIfIyDA/viewform?usp=sf_link" ><b>this form</b>.</a> <br>
 
                     There is no public transport up to Mount Stromlo Observatory,
                     though we will organise transportation from ANU main campus for those who require it (one round-trip per day).
                     Please let us know in the registration form if you will be requiring this transport, otherwise you are more than welcome to drive. <br>
                     If you have further questions please contact us via the
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf7ZXfUXscKkvgXRaMlwVJqz550lU6GaLd8oVvHUIBo0EH4vg/viewform?usp=sf_link" ><b>Contact Form</b>.</a>
+                    <a style="color: #FDDDA5; " href="https://docs.google.com/forms/d/e/1FAIpQLSf7ZXfUXscKkvgXRaMlwVJqz550lU6GaLd8oVvHUIBo0EH4vg/viewform?usp=sf_link" ><b>Contact Form</b>.</a>
                 </span></p>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Key Dates <br></span></h2>
                 <p><span style="color: #FDDDA5; "> <b>Registration closes</b> : Friday 20 October <br>
