--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,9 +36,9 @@ import Card from '../components/Card.astro';
                 </span></p>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Event Information <br></span></h2>
                 <p><span style="color: #FDDDA5; "> MSSS2023 is a free-to-attend, catered event organised by students of the RSAA. <br>
-                    It is not required for atendees to present a talk, though it is encouraged.
+                    It is not required for attendees to present a talk, though it is encouraged.
                     Student talks will be <b>15 minute presentations plus 5 minutes Q&A</b>.
-                    There will be prizes for the best science talk, themed talk and overall best as voted by atendees. <br>
+                    There will be prizes for the best science talk, themed talk and overall best as voted by attendees. <br>
                     We will be having a Panel Q&A with academics, post-docs and late-stage PhD students.
                     If you think of any questions to ask them, write them down and you can submit them during the event or via
                     <a style="color: #FDDDA5; " href="https://docs.google.com/forms/d/e/1FAIpQLSffxACsd2UrLTamUKFW_IwLjFxrrTJaghAWlCLHHPkXIfIyDA/viewform?usp=sf_link" ><b>this form</b>.</a> <br>
