--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -22,7 +22,8 @@ import Card from '../components/Card.astro';
         </section>
             <section id='program' style="align-content: centre; background-color:rgba(0,0,0,0.5);">
                 <h2><span style="color: #A5ADFD; ">Program <br></span></h2>
-                <!--<p><span style="color: #A5ADFD; ">The program.</span></p>-->
+                <p><span style="color: #A5ADFD; ">Please note: the program is still prelimary and changes may occur. <br> 
+                    Invited speakers are still to be announced, previous speakers include: Prof. Naomi McClure-Griffiths, Prof. Tony Travouillon and Dr. Lilli (Ling) Sun! </span></p>
                 <iframe class ='program_sizing' src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTWyeEk7lP0ghHTPQ5ildsaeMUd0iOvc79t3rZOsLwh2edWeJkB5RMMFtPvM7rc0qEBEMMLDUrcTamu/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
             </section>
     </main>
