--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,8 +56,8 @@ import Card from '../components/Card.astro';
                     <b>MSSS2023 event </b> : Wednesday 8-10 November
                 </span></p>
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Code of Conduct <br></span></h2>
-                <p><span style="color: #FDDDA5; "> Please behave professionally during the event and follow 
-                    <a style="color: #FDDDA5; " href="https://services.anu.edu.au/human-resources/respect-inclusion/code-of-conduct" ><b>ANU's Code of Conduct</b>.</a>
+                <p><span style="color: #FDDDA5; "> Please behave professionally during the event and follow the
+                    <a style="color: #FDDDA5; " href="https://services.anu.edu.au/human-resources/respect-inclusion/code-of-conduct" ><b>ANU Code of Conduct</b>.</a>
                 </span></p>
 
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> Acknowledgements <br></span></h2>
