--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -67,6 +67,9 @@ import Card from '../components/Card.astro';
                     Aboriginal and Torres Strait Islander peoples attending our event. <br>
                     We would also like to acknowledge funding provided by the ANU Research School of Astronomy and Astrophysics (RSAA).
                 </span></p>
+                <section id="anu_logo">
+                    <img class="logopic" src="/msss2023/anu_logo.png" alt="ANU Logo">
+                </section> 
 
             </section>
     </main>
