--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import Card from '../components/Card.astro';
                     It is not required for attendees to present a talk, though it is encouraged.
                     Student talks will be <b>15 minute presentations plus 5 minutes Q&A</b>.
                     There will be prizes for the best science talk, themed talk and overall best as voted by attendees. <br>
-                    We will be having a Panel Q&A with academics, post-docs and late-stage PhD students.
+                    We will be having a Panel Q&A with a variety of academics.
                     If you think of any questions to ask them, write them down and you can submit them during the event or via
                     <a style="color: #FDDDA5; " href="https://docs.google.com/forms/d/e/1FAIpQLSffxACsd2UrLTamUKFW_IwLjFxrrTJaghAWlCLHHPkXIfIyDA/viewform?usp=sf_link" ><b>this form</b>.</a> <br>
 
