comment out participants for now - add later

--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -45,7 +45,7 @@ import Card from '../components/Card.astro';
                         ANU </span></p>
                 </div>
                 </div>
-                <h2><span style="color: #D7A5FD; ">Participants <br> <br> </span></h2>
+                <!--<h2><span style="color: #D7A5FD; ">Participants <br> <br> </span></h2>
                 <div class = "row">   
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
@@ -57,7 +57,7 @@ import Card from '../components/Card.astro';
                     <p><span style="color: #D7A5FD;">
                         
                 </div>
-                </div>
+                </div> -->
             </section>
     </main>
 </Layout>
