--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ import Card from '../components/Card.astro';
                 <h2 style="text-align:center"><span style="color: #FDDDA5; "> About MSSS2023 <br></span></h2>
                 <p><span style="color: #FDDDA5; "> The ANU Research School of Astronomy and Astrophysics (RSAA) is proud
                     to present the Mount Stromlo Student Seminars 2023 (MSSS2023)! <br>
-                    MSSS2023 is a <b>free, fully-catered 3 day student-led conference</b> held at Mount Stromlo Observatory from the 8-10 November. <br>
+                    MSSS2023 is a <b>free, catered 3 day student-led conference</b> held at Mount Stromlo Observatory from the 8-10 November. <br>
                     This year's theme is <b>"Colours of the Universe"</b>. <br>
                     This year we invite students from around Australia to join us and present their research and/or themed talks. <br>
                     Some examples of previous talks are: astronomy murder mystery,
