--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -30,13 +30,18 @@ import Card from '../components/Card.astro';
                         Patrick Armstrong <br> <br>
                         Neco Kriel <br> <br>
                         Aman Khalid <br> <br>
+			Alan Chan <br> <br>
+			Madeleine McKenzie <br> <br>
                 </div>
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD;">Institution</span></h2>
                     <p><span style="color: #D7A5FD;">
                         ANU <br> <br>
                         ANU <br> <br>
+			UNSW <br> <br>
+			ANU <br> <br>
                         ANU </span></p>
+
                 <h2><span style="color: #D7A5FD; "> Local Organising Committee <br> <br> </span></h2>
                 <div class = "row">   
                 <div class = "column" >
