--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -32,6 +32,17 @@ import Card from '../components/Card.astro';
                         Aman Khalid <br> <br>
 			Alan Chan <br> <br>
 			Madeleine McKenzie <br> <br>
+			Lindsey Oberhelman <br> <br>
+			Max Charles <br> <br>
+			Hilay Shah <br> <br>
+			Marcie Mun <br> <br>
+			Sarah Elizabeth Aquilina <br> <br>
+			Sophia Ridolfo <br> <br>
+			Sara Alameeri <br> <br>
+			Brendan McKee <br> <br>
+			Yani Lach <br> <br>
+			Conaire Deagan <br> <br>
+			Hugh McDougall <br> <br>
                 </div>
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD;">Institution</span></h2>
