--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -51,6 +51,17 @@ import Card from '../components/Card.astro';
                         ANU <br> <br>
 			UNSW <br> <br>
 			ANU <br> <br>
+ 			ANU <br> <br>
+                        ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+                        ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+                        ANU <br> <br>
+			ANU <br> <br>
                         ANU </span></p>
 
                 <h2><span style="color: #D7A5FD; "> Local Organising Committee <br> <br> </span></h2>
