--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -43,6 +43,12 @@ import Card from '../components/Card.astro';
 			Yani Lach <br> <br>
 			Conaire Deagan <br> <br>
 			Hugh McDougall <br> <br>
+        		Neelesh Amrutha <br> <br>
+                        Sarah Bradbury <br> <br>
+                        Erin Holdorf <br> <br>
+                        Isaac Kanowski <br> <br>
+                        Shin-Jeong Kim <br> <br>
+                        Bailey Martin</span></p>
                 </div>
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD;">Institution</span></h2>
@@ -62,6 +68,12 @@ import Card from '../components/Card.astro';
 			ANU <br> <br>
                         ANU <br> <br>
 			ANU <br> <br>
+                        ANU <br> <br>
+  			ANU <br> <br>
+                        ANU, CSIRO <br> <br>
+                        ANU <br> <br>
+                        ANU <br> <br>
+                        ANU <br> <br>
                         ANU </span></p>
 
                 <h2><span style="color: #D7A5FD; "> Local Organising Committee <br> <br> </span></h2>
