--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -27,54 +27,104 @@ import Card from '../components/Card.astro';
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD; ">Name</span></h2>
                     <p><span style="color: #D7A5FD; ">
-                        Patrick Armstrong <br> <br>
-                        Neco Kriel <br> <br>
-                        Aman Khalid <br> <br>
 			Alan Chan <br> <br>
-			Madeleine McKenzie <br> <br>
-			Lindsey Oberhelman <br> <br>
-			Max Charles <br> <br>
-			Hilay Shah <br> <br>
-			Marcie Mun <br> <br>
-			Sarah Elizabeth Aquilina <br> <br>
-			Sophia Ridolfo <br> <br>
-			Sara Alameeri <br> <br>
+			Aman Khalid <br> <br>
+			Ana Lourdes Juarez Garcia <br> <br>
+			Arunima <br> <br>
+			Ashley Hai Tung Tan <br> <br>
+			Bailey Martin <br> <br>
+			Ben Lowe <br> <br>
 			Brendan McKee <br> <br>
-			Yani Lach <br> <br>
+			Chunliang Mu <br> <br>
 			Conaire Deagan <br> <br>
+			Eric Muller <br> <br>
+			Erin Holdorf <br> <br>
+			Evans Owusu <br> <br>
+			Hayden Park <br> <br>
+			Hilay Shah <br> <br>
 			Hugh McDougall <br> <br>
-        		Neelesh Amrutha <br> <br>
-                        Sarah Bradbury <br> <br>
-                        Erin Holdorf <br> <br>
-                        Isaac Kanowski <br> <br>
-                        Shin-Jeong Kim <br> <br>
-                        Bailey Martin</span></p>
+			Isaac Kanowski <br> <br>
+			Jack Nibbs <br> <br>
+			Jahang Prathap P K <br> <br>
+			Jim Chung  <br> <br>
+			Justin Kin Jun Hew <br> <br>
+			Karlie Noon <br> <br>
+			Kayla Martin <br> <br>
+			Liam Jackson <br> <br>
+			Lindsey Oberhelman <br> <br>
+			Louisa Canepa <br> <br>
+			Madeleine McKenzie <br> <br>
+			Maja Jablonska <br> <br>
+			Mallika Sinha <br> <br>
+			Manreet Kaur <br> <br>
+			Marcie Mun <br> <br>
+			Marcus Birch <br> <br>
+			Max Charles <br> <br>
+			Michael Frazer <br> <br>
+			Neco Kriel <br> <br>
+			Neelesh Amrutha <br> <br>
+			Patrick Armstrong <br> <br>
+			Peter Macgregor <br> <br>
+			Pradosh Barun Das <br> <br>
+			Radhika Achikanath Chirakkara <br> <br>
+			Ryan Bagge <br> <br>
+			Sajay Mathew <br> <br>
+			Sanja Lazarevic <br> <br>
+			Sara Alameeri  <br> <br>
+			Sarah Bradbury <br> <br>
+			Sarah Elizabeth Aquilina <br> <br>
+			Shin-Jeong Kim <br> <br>
+			Sophia Ridolfo <br> <br>
+			Tianmu 'Tim' Gao <br> <br>
+			Trey Yang <br> <br>
+			Yani Lach</span></p>
+
+            
                 </div>
                 <div class = "column" >
                     <h2><span style="color: #D7A5FD;">Institution</span></h2>
                     <p><span style="color: #D7A5FD;">
-                        ANU <br> <br>
-                        ANU <br> <br>
+			ANU <br> <br>
+			UNSW <br> <br>
+			Macquarie University <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			UNSW <br> <br>
+			Macquarie University <br> <br>
+			UNSW <br> <br>
 			UNSW <br> <br>
 			ANU <br> <br>
- 			ANU <br> <br>
-                        ANU <br> <br>
+			ANU <br> <br>
+			UNSW <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			University of Queensland <br> <br>
+			ANU <br> <br>
+			Macquarie University <br> <br>
+			Macquarie Univeristy <br> <br>
 			ANU <br> <br>
 			ANU <br> <br>
 			ANU <br> <br>
-                        ANU <br> <br>
+			Macquarie University <br> <br>
+			Monash University <br> <br>
+			ANU <br> <br>
+			UNSW <br> <br>
 			ANU <br> <br>
 			ANU <br> <br>
 			ANU <br> <br>
-                        ANU <br> <br>
 			ANU <br> <br>
-                        ANU <br> <br>
-  			ANU <br> <br>
-                        ANU, CSIRO <br> <br>
-                        ANU <br> <br>
-                        ANU <br> <br>
-                        ANU <br> <br>
-                        ANU </span></p>
+			ANU <br> <br>
+			ANU <br> <br>
+			University of Sydney <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			Western Sydney University <br> <br>
+			Macquarie University</span></p>
+                
 
         <h2><span style="color: #D7A5FD; "> Local Organising Committee <br> <br> </span></h2>
         <div class = "row">   
