--- a/src/pages/participants.astro
+++ b/src/pages/participants.astro
@@ -122,9 +122,20 @@ import Card from '../components/Card.astro';
 			ANU <br> <br>
 			ANU <br> <br>
 			Western Sydney University <br> <br>
-			Macquarie University</span></p>
+			Macquarie University <br> <br>
+			ANU <br> <br>
+			UNSW <br> <br>
+			ANU <br> <br>
+			Western Sydeny University <br> <br>
+			Monash University <br> <br>
+			ANU, CSIRO <br> <br>
+			Monash University <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			ANU <br> <br>
+			Monash University </span></p>
                 
-
         <h2><span style="color: #D7A5FD; "> Local Organising Committee <br> <br> </span></h2>
         <div class = "row">   
         <div class = "column" >
