--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -22,7 +22,7 @@ import Card from '../components/Card.astro';
         </section>
             <section id='program' style="align-content: centre; background-color:rgba(0,0,0,0.5);">
                 <h2><span style="color: #A5ADFD; ">Program <br></span></h2>
-                <p><span style="color: #A5ADFD; ">Please note: the program is still prelimary and changes may occur. <br> 
+                <p><span style="color: #A5ADFD; ">Please note there may be changes to the program so check back regularly to see the most up to date version. <br> 
                     This year's invited speakers are: A/Professor Christoph Federrath, Dr Kathryn Grasha, Mr Peter Swanton and A/Professor Emily Wisnioski </span></p>
                 <iframe class ='program_sizing' src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTWyeEk7lP0ghHTPQ5ildsaeMUd0iOvc79t3rZOsLwh2edWeJkB5RMMFtPvM7rc0qEBEMMLDUrcTamu/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
             </section>
@@ -96,14 +96,14 @@ import Card from '../components/Card.astro';
     @media only screen and (max-width:600px){
         .program_sizing{
             width:100% ;
-            height:932px
+            height:1750px
         }
     }
 
     @media only screen and (min-width:601px){
         .program_sizing{
             width:80% ;
-            height:1800px;
+            height:1750px;
         }
     }
 
