update to have logistics page

--- a/src/pages/logistics.astro
+++ b/src/pages/logistics.astro
@@ -18,12 +18,12 @@ import Card from '../components/Card.astro';
             <a href="/msss2023/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
             <!--<a href="#registration" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>-->
-           <a href="/msss2023/logistics/" class='button'><img src="/msss2023/logistics_button.png" width="75" alt="images"></a>
+            <a href="#logistics" class='button'><img src="/msss2023/logistics_button.png" width="75" alt="images"></a>
             <a href="/msss2023/program/" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="/msss2023/participants/" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
-            <section id='registration' style="background-color:rgba(0,0,0,0.5);">
-                <h2><span style="color: #A5FDF7; ">Registration <br></span></h2>
+            <section id='logistics' style="background-color:rgba(0,0,0,0.5);">
+                <h2><span style="color: #A5FDF7; ">Logistics <br></span></h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdUdnN8Be3sbMAUp1MvajPAtp-d51xfA_5qvKe4wtRLORfrcQ/viewform?embedded=true" width=100% height=1100px frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
             </section>
     </main>
