--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,8 @@ import Card from '../components/Card.astro';
         <section id="Menu">
             <a href="#info" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
             <!--<a href="#keydates" class='button'><img src="/msss2023/key_dates_button.png" width="75" alt="images"></a> -->
-            <a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
+            <!--<a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>-->
+           <a href="/msss2023/logistics/" class='button'><img src="/msss2023/logistics_button.png" width="75" alt="images"></a>
             <a href="/msss2023/program/" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="/msss2023/participants/" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
