--- a/src/pages/program.astro
+++ b/src/pages/program.astro
@@ -16,7 +16,8 @@ import Card from '../components/Card.astro';
         </div>
         <section id="Menu">
             <a href="/msss2023/" class='button'><img src="/msss2023/information_button.png" width="75" alt="images"></a>
-            <a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>
+           <!--<a href="/msss2023/registration/" class='button'><img src="/msss2023/registration_button.png" width="75" alt="images"></a>-->
+           <a href="/msss2023/logistics/" class='button'><img src="/msss2023/logistics_button.png" width="75" alt="images"></a>
             <a href="#program" class='button'><img src="/msss2023/program_button.png" width="75" alt="images"></a>
             <a href="/msss2023/participants/" class='button'><img src="/msss2023/participants_button.png" width="75" alt="images"></a>
         </section>
