--- a/src/pages/logistics.astro
+++ b/src/pages/logistics.astro
@@ -24,7 +24,7 @@ import Card from '../components/Card.astro';
         </section>
             <section id='logistics' style="background-color:rgba(0,0,0,0.5);">
                 <h2><span style="color: #A5FDF7; ">Logistics <br></span></h2>
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTAf2GHsdquzlsMVIKRFqcmj3AgNFDxNNZ6geppt7drxwBZRgbVeePidBuPOsj7cywM0cddMEuQIzXB/embed?start=true&loop=true&delayms=60000" width=65% height=1100px frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTAf2GHsdquzlsMVIKRFqcmj3AgNFDxNNZ6geppt7drxwBZRgbVeePidBuPOsj7cywM0cddMEuQIzXB/embed?start=true&loop=true&delayms=60000" width=65% height=1100px marginheight="0" marginwidth="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true">Loading…</iframe>
             </section>
     </main>
 </Layout>
